@@ -1,4 +1,4 @@
-- add more DB support (MySQL, ...)
+- add more DB support ( ... )
 - audio thumbnails (e.g. google search - what about limited requests by google)
 - audio thumbnails (images in the music folder?)
 - enable/disable webui (is it useful?)
