@@ -44,6 +44,7 @@ PIDFile			/var/run/pdlna.pid
 # the type of the database, which should be used by pDLNA
 # available options
 #  SQLITE3 - it will use a SQLITE3 database
+#  MYSQL   - it will use a MySQL database
 # if none is specified, it will be set to SQLITE3
 #DatabaseType	SQLITE3
 
@@ -52,7 +53,20 @@ PIDFile			/var/run/pdlna.pid
 # in case of SQLITE3, specify the location of SQLITE3 file
 #
 # if none is specified and the DatabaseType is SQLITE3, it will be set to /tmp/pdlna.db
+# if none is specified and the DatabaseType is MYSQL, it will be set to pdlna
 #DatabaseName /tmp/pdlna.db
+
+# DatabaseUsername
+# define a valid username for the MySQL server, which has all privileges to the configured DatabaseName
+#
+# if none is specified, it will be set to pdlna
+#DatabaseUsername	pdlna
+
+# DatbasePassword
+# define the valid password for the configured DatabaseUsername
+#
+# if none is specified, no password will be used to authenticate to the database
+#DatbasePassword
 
 #
 # NETWORK CONFIGURATION
