@@ -16,6 +16,7 @@ xx-xx-2013
 - added default values for FILEINFO database and increased PROGRAM_DBVERSION
 - indexing files is now about 4 to 5 times faster (by disabling AutoCommit)
 - storing media information is now 0.5 times faster (by disabling AutoCommit)
+- added support for MySQL
 
 Version 0.63.0
 08-07-2013
